refactored header responsiveness to fix ipad header alignment

--- a/src/styles/base/_main.scss
+++ b/src/styles/base/_main.scss
@@ -74,7 +74,7 @@ textarea {
 @media screen and (max-width: 600px) {
 	.title-container {
 		h1 {
-			@include fluid-type(font-size, 300px, 600px, 13px, 18px);
+			@include fluid-type(font-size, 300px, 600px, 12px, 18px);
 		}
 		.app-logo {
 			font-size: 2.8rem;
