--- a/src/styles/components/_preview.scss
+++ b/src/styles/components/_preview.scss
@@ -14,13 +14,18 @@
 	width: 100%;
 }
 .preview-header {
+	align-items: center;
 	border-bottom: solid 1px rgb(51, 165, 62);
 	color: rgb(51, 165, 62);
 	display: flex;
-	font-size: 2rem;
-	height: 15%;
 	flex-direction: row;
+	height: 15%;
+}
+.preview-title {
 	align-items: center;
+	display: flex;
+	flex-direction: row;
+	font-size: 2rem;
 }
 .preview-body {
 	@include fluid-type(font-size, 300px, 1200px, 10px, 20px);
@@ -28,14 +33,13 @@
 
 	background: white;
 	color: rgb(129, 129, 129);
-	// font-size: 1rem;
 	height: 85%;
 	overflow: scroll;
 	width: 100%;
 }
 @media screen and (max-width: 600px) {
-	.preview-header {
-		font-size: 1.2rem;
+	.preview-title {
+		font-size: .9rem;
 	}
 }
 @media screen and (orientation: landscape) {
@@ -52,11 +56,18 @@
 		padding-top: 0;
 	}
 	.preview-header {
-		font-size: 1.3rem;
 		height: 10%;
+	}
+	.preview-title {
+		font-size: 1.1rem;
 	}
 	.preview-body {
 		font-size: .75rem;
 		height: 90%;
+	}
+	@media only screen and (max-width: 700px) and (orientation: landscape) {
+		.preview-title {
+			font-size: .9rem;
+		}
 	}
 }
